--- a/README.Rmd
+++ b/README.Rmd
@@ -25,10 +25,6 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/StatisMike/shiny.reglog/workflows/R-CMD-check/badge.svg)](https://github.com/StatisMike/shiny.reglog/actions)
 <!-- badges: end -->
 
->These informations are relevant to the current release, which comes with some
-changes to underlying logic. It isn't currently submitted to CRAN. If you are
-looking for information about version present at CRAN, check its [mirror](https://github.com/cran/shiny.reglog){target="_blank"}
-
 ## 1. Introduction
 
 The user authentication in Shiny applications can be very useful. Mainly, user can 
@@ -100,12 +96,12 @@ reactivity of the login and registration system. It uses *dbConnector* and
 You can install this version of shiny.reglog from GitHub with:
 
 ```{r installation, eval=FALSE}
-# install version 0.5.0 from GitHub 
-install.packages("devtools")
-devtools::install_github("StatisMike/shiny.reglog")
+# install last stable release from CRAN
+install.packages("shiny.reglog")
 
-# or install old version from CRAN
-# install.packages("shiny.reglog")
+## or development version from GitHub
+install.packages("devtools")
+devtools::install.github("StatisMike/shiny.reglog")
 ```
 
 ## 5. Setting up *dbConnector*
@@ -146,8 +142,8 @@ credentials <- data.frame(
 # create gsheet database with some credentials
 gsheet_id <- gsheet_tables_create(
   user_data = credentials,
-  # as the password was not hashed with `script` before, it need to be
-  # hashed now
+  # as the password was not hashed with `script` before, 
+  # it need to be hashed now
   hash_passwords = T)
 
 ```
@@ -204,8 +200,12 @@ conn <- DBI::dbConnect(
 )
 
 # create database using the connection
-DBI_tables_create(conn = conn,
-                  user_data = credentials)
+DBI_tables_create(
+  conn = conn,
+  user_data = credentials,
+  # as the password was not hashed with `script` before, 
+  # it need to be hashed now
+  hash_passwords = T)
 
 DBI::dbDisconnect(conn)
 ```
@@ -342,11 +342,11 @@ provided functions containing `tagList`.
 Providing GUI to allow logging in if user is already registered to your 
 application.
 
-<img src="man/figures/login_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
-
 ```{r, eval = F}
 RegLog_login_UI()
 ```
+
+<img src="man/figures/login_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
 
 ### 8.2. Register UI
 
@@ -364,11 +364,11 @@ of at least 3 of 4 following groups:
 
 After account registration, user will receive confirmation email on their password.
 
-<img src="man/figures/register_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
-
 ```{r, eval = F}
 RegLog_register_UI()
 ```
+
+<img src="man/figures/register_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
 
 ### 8.3. Credentials edit UI
 
@@ -382,11 +382,11 @@ Providing GUI for changing credentials.
 - same checks as in register procedure are conducted
 - after user ID and/or e-mail change user will receive confirmation e-mail
 
-<img src="man/figures/credsEdit_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
-
 ```{r, eval = F}
 RegLog_credsEdit_UI()
 ```
+
+<img src="man/figures/credsEdit_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
 
 ### 8.4. Reset password UI
 
@@ -398,9 +398,10 @@ their user ID
 - inputing the reset code from e-mail will allow password change
 - same password check for new password is conducted as in register procedure
 
-<img src="man/figures/resetPass_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
-
 ```{r, eval = F}
 RegLog_resetPass_UI()
 ```
+
+<img src="man/figures/resetPass_UI.png" style="filter: drop-shadow(5px 5px 5px black); margin-bottom: 5px;">
+
 
